tests/bad/intervalo1.nx
// intervalos apenas se aplicam a valores positivos

print([-10..10]);